force-app/main/default/objects/Access_Hide_Product__c/Access_Hide_Product__c.object-meta.xml
<CustomObject>
    <label>Access Hide Product</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Access Hide Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Hide Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>