force-app/main/default/objects/Access_Hide_Product__c/fields/Hide__c.field-meta.xml
<CustomField>
    <fullName>Hide__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Hide</label>
    <type>Checkbox</type>
</CustomField>