force-app/main/default/objects/Access_Hide_Product__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Access Hide Products</relationshipLabel>
    <relationshipName>Access_Hide_Products</relationshipName>
    <type>Lookup</type>
</CustomField>