force-app/main/default/objects/Access_Hide_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Variety__c</columns>
    <columns>Hide__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>